syntax = "proto3";

package ON.Fragments.Authorization.Payment.Paypal;

message PaypalNewDetails {
  string AccountId = 1;
  string PlanId = 2;
}

